<resources>
    <string name="loginClick">login</string>
    <string name="cancel">Cancel</string>
    <string name="login_user_hint">please input username</string>
    <string name="login_tel_hint">please input tel</string>
    <string name="login_pwd_hint">please input password</string>
    <string name="login_old_pwd_hint">please input old password</string>
    <string name="login_new_pwd_hint">please input new password</string>
    <string name="login_code_hint">please input verification code</string>
    <string name="login_new_pwd_hint_again">please input new password again</string>
    <string name="user_name_hint">please input real name</string>
    <string name="user_id_card_hint">please input id number</string>
    <string name="login_way_code">verification code login</string>
    <string name="login_way_password">account password login</string>
    <string name="forget_password">forgot password</string>
    <string name="version_unknown">request error</string>
    <string name="noData">no data</string>
    <string name="state_network_error">network error</string>
    <string name="state_loading">loading…</string>
    <string name="state_not_more">no more data</string>
    <string name="state_load_error">load error</string>
    <string name="webview_menu_more">More</string>
    <string name="webview_sheet_provider">This webpage is provided by %1$s</string>
    <string name="webview_sheet_local_provider">Local content</string>
    <string name="webview_action_open_browser">Open it in a browser</string>
    <string name="webview_action_copy_link">Copy the link</string>
    <string name="state_refreshing">refreshing</string>
    <string name="state_loading_error">data loading&#8230;</string>
    <string name="state_submit">being submitted&#8230;</string>
    <string name="state_loading_again">click the icon to reload</string>
    <string name="setting_update">check upgrade</string>
    <string name="setting_qrcode">sweep qr code</string>
    <string name="setting_about">about us</string>
    <string name="setting_ITSupport">technical support</string>
    <string name="setting_feedBack">feedback</string>
    <string name="setting_exit">exit</string>
    <string name="manage_applications_settings_summary">application marketplace</string>
    <string name="settings">settiong</string>
    <string name="string_help_text">Permissions are missing, please check the Settings</string>
    <string name="lockViewTips">This password is used for security verification when the app is unlocked and used again after the screen is locked</string>
    <string name="set_lockView">Please set a gesture password</string>
    <string name="searchview_query_hint">please input keywords</string>
    <string name="pullToRefresh">pull down refresh</string>
    <string name="loosenToRefresh">loosen to refresh</string>
    <string name="refreshing">refreshing</string>
    <string name="folder_all">All Images</string>
    <string name="preview">Preview</string>
    <string name="msg_no_camera">No system camera found</string>
    <string name="msg_amount_limit">Select images amount is limit</string>
    <string name="action_done">Done</string>
    <string name="action_button_string" translatable="false">%1$s(%2$d/%3$d)</string>
    <string name="photo_unit">Shot</string>
    <string name="tip_take_photo">Take photo</string>
    <string name="error_image_not_exist">Image error</string>
    <string name="error_no_permission">Has no permission</string>
    <string name="permission_dialog_title">Permission Deny</string>
    <string name="permission_dialog_ok">OK</string>
    <string name="permission_dialog_cancel">Refuse</string>
    <string name="permission_rationale">Storage read permission is needed to pick files.</string>
    <string name="permission_rationale_write_storage">Storage write permission is needed to save the image.</string>
    <string name="upgrade">upgrade</string>
    <string name="checked_new_version">A new version has been detected</string>
    <string name="no_upgrade_info">There is no description of the updated content for the time being</string>
    <string name="loading_now">Loading…</string>
    <string name="please_entry_something">Please enter</string>
    <string name="confirm">OK</string>
    <string name="tips_message">Tips</string>
    <string name="search">Search</string>
    <string name="please_enter">Please enter…</string>
    <string name="year">Years</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="today">today</string>
    <string name="hour">Hours</string>
    <string name="close">Close</string>
    <string name="minute">Minute</string>
    <string name="second">Second</string>
    <string name="save_to_local">Save to local</string>
    <string name="please_choose_count">Please select the quantity</string>
    <string name="clear">Clear</string>
    <string name="please_choose">Please select</string>
    <string name="modify">Modify</string>
    <string name="create">Create</string>
    <string name="protection_guidelines">Personal Information Protection Guidelines</string>
    <string name="agree_and_continue">Agree and continue</string>
    <string name="think_again">Think again</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="retry">Retry</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="more">More</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="select_all">Select All</string>
    <string name="deselect_all">Deselect All</string>
    <string name="refresh">Refresh</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="detail">Detail</string>
    <string name="view_all">View All</string>
    <string name="preview_location">Location</string>
    <string name="preview_previous">Previous</string>
    <string name="preview_next">Next</string>
    <string name="preview_album_title">Photos and Videos</string>
    <string name="load_more">Load More</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="verification_code">Verification Code</string>
    <string name="get_verification_code">Get Code</string>
    <string name="resend_verification_code">Resend</string>
    <string name="agree_privacy_policy">Agree to Privacy Policy</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="user_agreement">User Agreement</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="no_account">No account yet?</string>
    <string name="register_now">Register Now</string>
    <string name="login_now">Login Now</string>
    <string name="loading">Loading…</string>
    <string name="load_failed">Load failed</string>
    <string name="load_success">Load successful</string>
    <string name="submit_success">Submit successful</string>
    <string name="submit_failed">Submit failed</string>
    <string name="operation_success">Operation successful</string>
    <string name="operation_failed">Operation failed</string>
    <string name="network_unavailable">Network unavailable, please check your network settings</string>
    <string name="network_connecting">Connecting to network…</string>
    <string name="data_empty">No data</string>
    <string name="data_error">Data error</string>
    <string name="request_timeout">Request timeout, please try again later</string>
    <string name="server_error">Server error, please try again later</string>
    <string name="field_required">This field is required</string>
    <string name="invalid_phone_number">Please enter a valid phone number</string>
    <string name="invalid_email">Please enter a valid email address</string>
    <string name="invalid_username">Invalid username format</string>
    <string name="password_length_limit">Password must be at least %1$d characters</string>
    <string name="password_not_match">Passwords do not match</string>
    <string name="invalid_verification_code">Invalid verification code</string>
    <string name="id_card_invalid">Invalid ID number format</string>
    <string name="just_now">Just now</string>
    <string name="minutes_ago">%1$d minutes ago</string>
    <string name="hours_ago">%1$d hours ago</string>
    <string name="yesterday">Yesterday</string>
    <string name="days_ago">%1$d days ago</string>
    <string name="weeks_ago">%1$d weeks ago</string>
    <string name="months_ago">%1$d months ago</string>
    <string name="years_ago">%1$d years ago</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="date_format_ymd">%1$d/%2$d/%3$d</string>
    <string name="date_format_ymd_slash">%1$d/%2$d/%3$d</string>
    <string name="time_format_hms">%1$d:%2$d:%3$d</string>
    <string name="time_format_hm">%1$d:%2$d</string>
    <string name="camera">Camera</string>
    <string name="album">Album</string>
    <string name="gallery">Gallery</string>
    <string name="select_image">Select Image</string>
    <string name="select_video">Select Video</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_album">Choose from Album</string>
    <string name="image_preview">Image Preview</string>
    <string name="video_preview">Video Preview</string>
    <string name="video_dialog_close">Close player</string>
    <string name="video_dialog_invalid_url">Invalid video URL</string>
    <string name="video_rotate">Rotate screen</string>
    <string name="video_lock">Lock screen</string>
    <string name="video_speed">Playback speed</string>
    <string name="video_clarity">Quality</string>
    <string name="video_clarity_origin">Original</string>
    <string name="video_clarity_hint">Select playback quality</string>
    <string name="video_fullscreen">Fullscreen</string>
    <string name="compress_image">Compress Image</string>
    <string name="original_image">Original</string>
    <string name="image_selected_count">%1$d images selected</string>
    <string name="video_selected_count">%1$d videos selected</string>
    <string name="max_select_limit">Maximum %1$d items</string>
    <string name="account_settings">Account Settings</string>
    <string name="personal_info">Personal Information</string>
    <string name="change_password">Change Password</string>
    <string name="change_phone">Change Phone Number</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="privacy_settings">Privacy Settings</string>
    <string name="language_settings">Language Settings</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="cache_size">Cache Size</string>
    <string name="version_info">Version Info</string>
    <string name="check_update">Check for Updates</string>
    <string name="current_version">Current Version</string>
    <string name="latest_version">Latest Version</string>
    <string name="update_now">Update Now</string>
    <string name="update_later">Later</string>
    <string name="force_update_tip">A new version is available, please update to continue</string>
    <string name="exit_app">Exit App</string>
    <string name="exit_app_confirm">Are you sure you want to exit?</string>
    <string name="logout_confirm">Are you sure you want to log out?</string>
</resources>