<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:ignore="ResourceName">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/default_background"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_xxxxl"
            android:layout_marginStart="@dimen/horizontal_margin_xl"
            android:layout_marginEnd="@dimen/horizontal_margin_xl"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/vertical_margin_m"
                android:includeFontPadding="false"
                android:layout_weight="0"
                android:textSize="@dimen/font_size_l"
                android:text="原密码" />

            <EditText
                android:id="@+id/edit_old_password"
                style="@style/modify_password_edit"
                android:hint="@string/login_old_pwd_hint"
                android:imeOptions="actionNext" />

            <View
                style="@style/h_line"
                android:layout_weight="0" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_xxxxl"
            android:layout_marginStart="@dimen/horizontal_margin_xl"
            android:layout_marginEnd="@dimen/horizontal_margin_xl"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/vertical_margin_m"
                android:includeFontPadding="false"
                android:textSize="@dimen/font_size_l"
                android:layout_weight="0"
                android:text="新密码" />

            <EditText
                android:id="@+id/edit_new_password"
                style="@style/modify_password_edit"
                android:hint="@string/login_new_pwd_hint"
                android:imeOptions="actionNext" />

            <View
                style="@style/h_line"
                android:layout_weight="0" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_xxxxl"
            android:layout_marginStart="@dimen/horizontal_margin_xl"
            android:layout_marginEnd="@dimen/horizontal_margin_xl"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/vertical_margin_m"
                android:includeFontPadding="false"
                android:layout_weight="0"
                android:textSize="@dimen/font_size_l"
                android:text="确认新密码" />

            <EditText
                android:id="@+id/edit_new_password_again"
                style="@style/modify_password_edit"
                android:hint="@string/login_new_pwd_hint_again"
                android:imeOptions="actionDone" />

            <View
                style="@style/h_line"
                android:layout_weight="0" />

        </LinearLayout>

        <Button
            android:id="@+id/modify_password_submit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_xxxl"
            style="?android:attr/borderlessButtonStyle"
            android:layout_marginStart="@dimen/horizontal_margin_xl"
            android:layout_marginEnd="@dimen/horizontal_margin_xl"
            android:layout_marginTop="@dimen/height_xxxxl"
            android:background="@drawable/selector_button"
            android:text="确定"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_xxl" />
    </LinearLayout>
</layout>