<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="io.coderf.arklab.user.api.UserAccountHelper" />

        <import type="android.view.View" />

        <variable
            name="setViewModel"
            type="io.coderf.arklab.user.viewmodel.SettingViewModel" />

        <import type="io.coderf.arklab.common.api.AppSettingHelper" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:attr/colorBackground"
        android:clickable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View style="@style/h_area" />

            <io.coderf.arklab.common.widget.customview.IconLabelValueView
                android:id="@+id/cleanUp"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="?attr/colorSurface"
                app:bottomBorder="true"
                app:showLeftIcon="false"
                app:labelStartMargin="@dimen/horizontal_margin_xl"
                app:leftIconMarginStart="0dp"
                app:rightIconMarginStart="@dimen/horizontal_margin_xl"
                app:label="@string/user_setting_clear_cache"
                app:labelTextColor="?attr/colorOnSurface"
                app:labelTextSize="@dimen/font_size_xl"
                app:rightIconSrc="@mipmap/ic_arrow_right"
                app:showRightIcon="true"
                app:rightIconWidth="12dp"
                app:rightIconHeight="24dp"
                app:value="@{setViewModel.getCacheSize()}"
                android:onClick="@{setViewModel::onClick}"
                app:valueTextColor="?attr/colorOnSurfaceVariant"
                app:valueTextSize="@dimen/font_size_l" />

            <io.coderf.arklab.common.widget.customview.IconLabelValueView
                android:id="@+id/versionName"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="?attr/colorSurface"
                app:bottomBorder="true"
                app:showLeftIcon="false"
                app:labelStartMargin="@dimen/horizontal_margin_xl"
                app:leftIconMarginStart="0dp"
                app:rightIconMarginStart="@dimen/horizontal_margin_xl"
                app:label="@string/setting_update"
                app:labelTextColor="?attr/colorOnSurface"
                app:labelTextSize="@dimen/font_size_xl"
                app:rightIconSrc="@mipmap/ic_arrow_right"
                app:showRightIcon="true"
                app:rightIconWidth="12dp"
                app:rightIconHeight="24dp"
                android:onClick="@{setViewModel::onClick}"
                app:valueTextColor="?attr/colorOnSurfaceVariant"
                app:valueTextSize="@dimen/font_size_l" />


            <io.coderf.arklab.common.widget.customview.IconLabelValueView
                android:id="@+id/tv_support"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="?attr/colorSurface"
                app:bottomBorder="true"
                app:showLeftIcon="false"
                app:labelStartMargin="@dimen/horizontal_margin_xl"
                app:leftIconMarginStart="0dp"
                app:rightIconMarginStart="@dimen/horizontal_margin_xl"
                app:label="@string/setting_ITSupport"
                app:labelTextColor="?attr/colorOnSurface"
                app:labelTextSize="@dimen/font_size_xl"
                app:rightIconSrc="@mipmap/ic_arrow_right"
                app:showRightIcon="true"
                app:rightIconWidth="12dp"
                app:rightIconHeight="24dp"
                android:onClick="@{setViewModel::onClick}"
                app:value="青穗"
                app:valueTextColor="?attr/colorOnSurfaceVariant"
                app:valueTextSize="@dimen/font_size_l" />


            <io.coderf.arklab.common.widget.customview.IconLabelValueView
                android:id="@+id/tv_feedback"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="?attr/colorSurface"
                app:bottomBorder="false"
                app:showLeftIcon="false"
                app:labelStartMargin="@dimen/horizontal_margin_xl"
                app:leftIconMarginStart="0dp"
                app:rightIconMarginStart="@dimen/horizontal_margin_xl"
                app:label="@string/setting_feedBack"
                app:labelTextColor="?attr/colorOnSurface"
                app:labelTextSize="@dimen/font_size_xl"
                app:rightIconSrc="@mipmap/ic_arrow_right"
                app:showRightIcon="true"
                app:rightIconWidth="12dp"
                app:rightIconHeight="24dp"
                android:onClick="@{setViewModel::onClick}"
                app:value=""
                app:valueTextColor="?attr/colorOnSurfaceVariant"
                app:valueTextSize="@dimen/font_size_l" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/setting_exit"
                style="@style/Widget.App.Button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_xxl"
                android:layout_marginTop="@dimen/vertical_margin_xl"
                android:gravity="center"
                android:onClick="@{setViewModel::onClick}"
                android:text="@string/setting_exit"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="@dimen/font_size_xxl"
                android:visibility="@{UserAccountHelper.isLogin()?View.VISIBLE:View.GONE}"
                app:backgroundTint="?attr/colorError"
                app:cornerRadius="0dp"
                tools:targetApi="lollipop" />
        </LinearLayout>
    </ScrollView>
</layout>
