<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/default_background">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/login_submit"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_xxxl"
                android:layout_below="@+id/edit_layout"
                android:layout_marginStart="@dimen/horizontal_margin_xxxxl"
                android:layout_marginTop="@dimen/vertical_margin_xxxxl"
                android:layout_marginEnd="@dimen/horizontal_margin_xxxxl"
                android:background="@drawable/round_theme_color_48"
                android:onClick="@{(view) ->loginViewModel.loginClick(view,loginBean,password)}"
                android:text="登录"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_xxl" />

            <LinearLayout
                android:id="@+id/edit_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/horizontal_margin_xxxxl"
                    android:layout_marginTop="@dimen/vertical_margin_xxxxl"
                    android:layout_marginEnd="@dimen/horizontal_margin_xxxxl"
                    android:layout_marginBottom="@dimen/vertical_margin_m"
                    android:background="@drawable/rounded_white_16"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/user_edit"
                        style="@style/login_edit"
                        android:background="@null"
                        android:focusable="true"
                        android:hint="@string/login_tel_hint"
                        android:inputType="text"
                        android:imeOptions="actionNext"
                        android:maxLength="11"
                        android:maxLines="1"
                        android:paddingStart="@dimen/horizontal_margin_xl"
                        android:paddingEnd="@dimen/horizontal_margin_xl"
                        android:text="@={loginBean.username}"
                        android:textAppearance="?android:attr/textAppearanceLargeInverse" />

                    <View
                        android:id="@+id/line_password"
                        style="@style/h_line" />

                    <LinearLayout
                        android:id="@+id/ll_password"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height_xxxxl"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/password_edit"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@null"
                            android:focusable="true"
                            android:hint="@string/login_pwd_hint"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:paddingStart="@dimen/horizontal_margin_xl"
                            android:paddingEnd="@dimen/horizontal_margin_xl"
                            android:text="@={password}"
                            android:textAppearance="?android:attr/textAppearanceLargeInverse"
                            android:textColor="@color/autoColor"
                            android:textColorHint="@color/dark_light"
                            android:textSize="@dimen/font_size_xl" />

                        <TextView
                            android:id="@+id/phone_number_button"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="0"
                            android:clickable="false"
                            android:gravity="center_vertical"
                            android:paddingStart="@dimen/horizontal_margin_l"
                            android:paddingEnd="@dimen/horizontal_margin_l"
                            android:text="获取验证码"
                            android:textColor="@color/autoColor"
                            android:textSize="@dimen/font_size_l"
                            android:visibility="@{loginBean.loginWay==1?View.GONE:View.VISIBLE}" />
                    </LinearLayout>


                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/rl_forget_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_submit"
                android:layout_marginStart="@dimen/horizontal_margin_xxxxl"
                android:layout_marginEnd="@dimen/horizontal_margin_xxxxl">

                <TextView
                    android:id="@+id/tv_login_way_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{(view) ->loginViewModel.loginClick(view,loginBean)}"
                    android:text="@string/login_way_code"
                    android:textColor="@color/nv_bg_color"
                    android:textSize="@dimen/font_size_m" />

                <TextView
                    android:id="@+id/tv_forget_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:onClick="@{(view) ->loginViewModel.loginClick(view,loginBean)}"
                    android:text="@string/forget_password"
                    android:textColor="@color/nv_bg_color"
                    android:textSize="@dimen/font_size_m" />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

    <data>

        <import type="android.view.View" />

        <variable
            name="loginBean"
            type="com.casic.titan.usercomponent.bean.RequestLoginBean" />

        <variable
            name="loginViewModel"
            type="com.casic.titan.usercomponent.viewmodel.UserViewModel" />

        <variable
            name="password"
            type="String" />
    </data>
</layout>